Internal Error: x86/vm/macroAssembler_x86.cpp:886 DEBUG MESSAGE: StubRoutines::call_stub: threads must correspond

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b83

        jdk9, adhoc testing.

        runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java crashed.
        happened once on Solaris10 (x64).

        jtr and hs_err attached.


        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/153840.dfazunen/s/hotspot/src/cpu/x86/vm/macroAssembler_x86.cpp:886), pid=25003, tid=0x0000000000000025
        # assert(false) failed: DEBUG MESSAGE: StubRoutines::call_stub: threads must correspond
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150813153840.dfazunen.hs-rt-b00)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150813153840.dfazunen.hs-rt-b00, mixed mode, tiered, compressed oops, concurrent mark sweep gc, solaris-amd64)
        # Core dump will be written. Default location: /bpool/local/aurora/sandbox/results/workDir/runtime/CommandLine/OptionsValidation/TestOptionsWithRanges/core or core.25003
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -XX:+UseConcMarkSweepGC -XX:CMSSamplingGrain=1 optionsvalidation.JVMOptionsUtils

        Host: slcak741, x86 64 bit 2893 MHz, 32 cores, 255G, Oracle Solaris 10 8/11 s10x_u10wos_17b X86
        Time: Fri Aug 14 10:10:55 2015 UTC elapsed time: 13 seconds (0d 0h 0m 13s)

        --------------- T H R E A D ---------------

        Current thread (0x000000035ec3c000): JavaThread "Signal Dispatcher" daemon [_thread_in_Java, id=37, stack(0xfffffd783d1fe000,0xfffffd783d2fe000)]

        Stack: [0xfffffd783d1fe000,0xfffffd783d2fe000], sp=0xfffffd783d2fa910, free space=1010k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1e88da6] void VMError::report(outputStream*)+0xc46
        V [libjvm.so+0x1e8a321] void VMError::report_and_die()+0x5b1
        V [libjvm.so+0x1252afe] void report_vm_error(const char*,int,const char*,const char*)+0x7e
        V [libjvm.so+0x196d96b] void MacroAssembler::debug64(char*,long,long*)+0x1db
        v ~StubRoutines::call_stub
        V [libjvm.so+0x15c88bb] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x41b
        V [libjvm.so+0x15c6a42] void JavaCalls::call_virtual(JavaValue*,KlassHandle,Symbol*,Symbol*,JavaCallArguments*,Thread*)+0x282
        V [libjvm.so+0x15c6bbc] void JavaCalls::call_virtual(JavaValue*,Handle,KlassHandle,Symbol*,Symbol*,Thread*)+0xec
        V [libjvm.so+0x1dc7016] void JavaThread::exit(bool,JavaThread::ExitType)+0xc06
        V [libjvm.so+0x1dc609b] void JavaThread::thread_main_inner()+0x38b
        V [libjvm.so+0x1dc5b22] void JavaThread::run()+0x352
        V [libjvm.so+0x1b0c63c] java_start+0x1dc
        C [libc.so.1+0xdd60b] _thr_setup+0x5b
        C [libc.so.1+0xdd840] _lwp_start+0x0

        [error occurred during error reporting (printing native stack), id 0xe0000000]

          1. TestOptionsWithRanges.jtr
            117 kB
            Dmitry Fazunenko
          2. hs_err_pid25003.log
            12 kB
            Dmitry Fazunenko

              Assignee:
              David Holmes
              Reporter:
              Dmitry Fazunenko (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: